--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=5.5.0",
         "bear/package": "~1.0",
-        "josegonzalez/dotenv": "~2.0"
+        "josegonzalez/dotenv": "~2.0",
+        "bear/aura-router-module": "~1.0"
     },
     "require-dev": {
         "composer/composer": ">=1.0.0-beta1",
