--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "bear/package": "~1.0",
         "josegonzalez/dotenv": "~2.0",
         "bear/aura-router-module": "~1.0",
-        "monolog/monolog": "~1.0"
+        "monolog/monolog": "~1.0",
+        "madapaja/twig-module": "~1.0"
     },
     "require-dev": {
         "composer/composer": ">=1.0.0-beta1",
